--- a/css/main.css
+++ b/css/main.css
@@ -834,7 +834,7 @@ img {
   margin-left: 93px;
 }
 
-.footer-input {
+.footer__input {
   width: 358px;
   height: 50px;
   margin-right: 12px;
@@ -848,11 +848,11 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-input:hover, .footer-input:focus {
+.footer__input:hover, .footer__input:focus {
   border: 1px solid var(--accent-color);
 }
 
-.submit-btn {
+.footer__btn {
   width: 200px;
   height: 50px;
   justify-content: center;
@@ -869,11 +869,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.submit-btn:hover, .submit-btn:focus {
+.footer__btn:hover, .footer__btn:focus {
   background-color: var(--link-services-color);
 }
 
-.footer-btn-icon {
+.footer__btn-icon {
   width: 24px;
   height: 24px;
   margin-left: 12px;
