--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -87,7 +87,7 @@
   margin-left: 93px;
 }
 
-.footer-input {
+.footer__input {
   width: 358px;
   height: 50px;
   margin-right: 12px;
@@ -106,7 +106,7 @@
   }
 }
 
-.submit-btn {
+.footer__btn {
   width: 200px;
   height: 50px;
   justify-content: center;
@@ -129,7 +129,7 @@
   }
 }
 
-.footer-btn-icon {
+.footer__btn-icon {
   width: 24px;
   height: 24px;
   margin-left: 12px;
